--- a/404.html
+++ b/404.html
@@ -1,5 +1,21 @@
-<center>
+<!-- <center>
 <h1>CentOS 7.0</h1>
 <hr/>
 404 not found
-</center>
+</center> -->
+
+<!DOCTYPE html>
+<html>
+<head>
+<script>
+// Redirect to the non-extension URL
+var url = window.location.href;
+if (url.endsWith(".html")) {
+    var newUrl = url.substring(0, url.length - 5);
+    window.location.replace(newUrl);
+}
+</script>
+</head>
+<body>
+</body>
+</html>
